--- a/src/components/Header/HeaderStyle.css
+++ b/src/components/Header/HeaderStyle.css
@@ -8,7 +8,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 101;
   /* box-shadow: 1px 1px 5px rgba(110, 7, 119, 0.5); */
 }
 
